Floss: Sync the read/write of HFP
Instead of read and write a fixed length of data, change to use the
added hfp_rw_offset to sync the bytes CRAS read/write from/to the HF.
This change should mitigate the pop noises introduced by CRAS or
Fluroide's late wake up or inconsistent data rate.

BUG=b:225024213
TEST=build,deploy, test HFP playback for longer of time and also walk
around to verify the unstable data rate scenario.

Change-Id: If49b7cae408508c1d7107a3e627ada3578c400db
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/adhd/+/3527823
Tested-by: En-Shuo Hsu <enshuo@chromium.org>
Auto-Submit: En-Shuo Hsu <enshuo@chromium.org>
Reviewed-by: Hsinyu Chao <hychao@chromium.org>
Commit-Queue: Hsinyu Chao <hychao@chromium.org>
(cherry picked from commit 512cff146a5ffa7df1077ca573d9a997a4f6ef70)
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/adhd/+/3550124

--- a/cras/src/Makefile.am
+++ b/cras/src/Makefile.am
@@ -680,7 +680,8 @@ a2dp_manager_unittest_LDADD = -lgtest -lpthread $(DBUS_LIBS)
 endif
 
 fl_pcm_iodev_unittest_SOURCES = tests/fl_pcm_iodev_unittest.cc \
-	common/sfh.c
+	common/sfh.c \
+	common/cras_string.c
 fl_pcm_iodev_unittest_CPPFLAGS = $(COMMON_CPPFLAGS) \
 	-I$(top_srcdir)/src/server -I$(top_srcdir)/src/common
 fl_pcm_iodev_unittest_LDADD = -lgtest -lpthread
